--- a/src/app/shop/offers/offer-creation-updating-dialog.component.html
+++ b/src/app/shop/offers/offer-creation-updating-dialog.component.html
@@ -3,19 +3,19 @@
   <mat-form-field class="full-width">
     <mat-label>Description</mat-label>
     <label>
-      <input [(ngModel)]="offer.description" matInput required type="text"/>
+      <input [(ngModel)]="newOffer.description" matInput required type="text"/>
     </label>
   </mat-form-field>
   <mat-form-field class="full-width">
     <mat-label>Expiry Date</mat-label>
     <label>
-      <input [(ngModel)]="offer.expiryDate" matInput required type="date">
+      <input [(ngModel)]="newOffer.expiryDate" matInput required type="date">
     </label>
   </mat-form-field>
   <mat-form-field class="full-width">
     <mat-label>Discount</mat-label>
     <label>
-      <input [(ngModel)]="offer.discount" matInput required type="number">
+      <input [(ngModel)]="newOffer.discount" matInput required type="number">
     </label>
     <mat-hint align="start">%</mat-hint>
   </mat-form-field>
@@ -24,7 +24,7 @@
     <mat-label>Selected Articles</mat-label>
     <mat-chip-list>
       <mat-chip
-        *ngFor="let barcode of barcodes"
+        *ngFor="let barcode of newOffer.articleBarcodes"
         [selectable]="selectable"
         [removable]="removable"
         (removed)="removeBarcode(barcode)">
