--- a/src/app/shop/articles-family/articles-family/articles-family.component.html
+++ b/src/app/shop/articles-family/articles-family/articles-family.component.html
@@ -10,7 +10,10 @@
         <button (click)="createFamilyArticle(node)" mat-button mat-icon-button matSuffix>
           <mat-icon color="warn">add</mat-icon>
         </button>
-        <button (click)="editFamilyArticle(node)" mat-button mat-icon-button matSuffix>
+        <button *ngIf="(node.type!='ARTICLE')" (click)="addArticle(node)" mat-button mat-icon-button matSuffix>
+          <mat-icon color="primary">add</mat-icon>
+        </button>
+        <button *ngIf="(node.type!='ARTICLE')" (click)="editFamilyArticle(node)" mat-button mat-icon-button matSuffix>
           <mat-icon color="warn">mode_edit</mat-icon>
         </button>
         <button (click)="deleteFamilyArticle(node)" mat-button mat-icon-button matSuffix>
@@ -35,6 +38,9 @@
         <div class="crudButtons">
           <button (click)="createFamilyArticle(node)" mat-button mat-icon-button matSuffix>
             <mat-icon color="warn">add</mat-icon>
+          </button>
+          <button *ngIf="(node.type!='ARTICLE')" (click)="addArticle(node)" mat-button mat-icon-button matSuffix>
+            <mat-icon color="primary">add</mat-icon>
           </button>
           <button (click)="editFamilyArticle(node)"  mat-button mat-icon-button matSuffix>
             <mat-icon color="warn">mode_edit</mat-icon>
