#32 Add crud component to template Add basic mocked vouchers to service

--- a/src/app/shop/vouchers/vouchers.component.html
+++ b/src/app/shop/vouchers/vouchers.component.html
@@ -1,1 +1,5 @@
-
+<app-crud (create)="create()" (read)="read($event)"
+          [updateAction]="false"
+          [deleteAction]="false"
+          [data]="vouchers"
+          [title]="title"></app-crud>
