--- a/src/app/shop/cashier-opened/cashier-closure/cashier-closure.component.html
+++ b/src/app/shop/cashier-opened/cashier-closure/cashier-closure.component.html
@@ -1,5 +1,5 @@
 <button (click)="search()" mat-icon-button>
   <mat-icon>search</mat-icon>
 </button>
-<app-crud (update)="update($event)"
-          [data]="cashiers" [deleteAction]="false" [createAction]="false" [title]="title"></app-crud>
+<app-crud [data]="cashiers" [deleteAction]="false" [createAction]="false" [updateAction]="false"
+          [title]="title"></app-crud>
