--- a/src/app/shop/articles-family/dialogs/add-article-dialog/add-article-dialog.component.html
+++ b/src/app/shop/articles-family/dialogs/add-article-dialog/add-article-dialog.component.html
@@ -1,6 +1,6 @@
-<h3 mat-dialog-title>New Family Article</h3>
+<h3 mat-dialog-title>Add Article</h3>
 <mat-dialog-content>
-      <app-search-by-barcode (add)="addBarcode($event)"></app-search-by-barcode>
+  <app-search-by-barcode (add)="addBarcode($event)"></app-search-by-barcode>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Cancel</button>
