Add model and service #23

--- a/src/app/shop/provider-invoices/provider-invoices.component.html
+++ b/src/app/shop/provider-invoices/provider-invoices.component.html
@@ -1,1 +1,2 @@
-<p>provider-invoices works!</p>
+<app-crud (create)="create()" (read)="read($event)" (update)="update($event)" (delete)="delete($event)"
+          [data]="providerInvoices" [title]="title"></app-crud>
