--- a/src/app/shop/stock-alarms/stock-alarms-creation-updating-dialog.component.html
+++ b/src/app/shop/stock-alarms/stock-alarms-creation-updating-dialog.component.html
@@ -11,21 +11,24 @@
   </mat-form-field>
   <mat-form-field class="full-width">
     <mat-label>Warning</mat-label>
-    <input [(ngModel)]="stockAlarm.warning" matInput required type="number">
+    <input [(ngModel)]="stockAlarm.warning" matInput required type="number" class="warning">
   </mat-form-field>
   <mat-form-field class="full-width">
     <mat-label>Critical</mat-label>
-    <input [(ngModel)]="stockAlarm.critical" matInput type="number">
+    <input [(ngModel)]="stockAlarm.critical" matInput type="number" class="critical">
   </mat-form-field>
-  <app-search-by-barcode></app-search-by-barcode>
-
+  <app-search-by-barcode (add)="addAlarmLine($event)"></app-search-by-barcode>
+  <div *ngFor="let current of stockAlarm.stockAlarmLines">
+    <app-stock-alarm-chip [data]="current" (update)="updateAlarmLine($event)" (delete)="removeAlarmLine($event)"></app-stock-alarm-chip>
+  </div>
 
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <!--  <button cdkFocusInitial mat-dialog-close mat-raised-button>Close</button>-->
-  <!--  <button (click)="create()" *ngIf="isCreate()" [disabled]=invalid() color="primary" mat-raised-button>Create-->
-  <!--  </button>-->
-  <!--  <button (click)="update()" *ngIf="!isCreate()" [disabled]=invalid() color="primary" mat-raised-button>Update-->
-  <!--  </button>-->
+
+    <button cdkFocusInitial mat-dialog-close mat-raised-button>Close</button>
+    <button (click)="create()" *ngIf="isCreate()"  color="primary" mat-raised-button>Create
+    </button>
+    <button (click)="update()" *ngIf="!isCreate()" color="primary" mat-raised-button>Update
+    </button>
 </mat-dialog-actions>
