use of app-search

--- a/src/app/shop/data-protection-act/data-protection-act-dialog.component.html
+++ b/src/app/shop/data-protection-act/data-protection-act-dialog.component.html
@@ -1,16 +1,8 @@
 <mat-card>
-  <mat-card-content>
-    <mat-form-field>
-      <mat-label>Mobile</mat-label>
-      <input [(ngModel)]="rgpdUser.mobile" matInput>
-    </mat-form-field>
-    <button (click)="search()" mat-icon-button>
-      <mat-icon>search</mat-icon>
-    </button>
-    <button (click)="resetSearch()" mat-icon-button>
-      <mat-icon>close</mat-icon>
-    </button>
-  </mat-card-content>
-  <app-manage-data-protection-act [rgpdUser]="rgpdUser"></app-manage-data-protection-act>
+  <mat-dialog-content>
+    <app-search title="Mobile" [(key)]="userMobile" [keys]="mobiles" (renew)="findMobiles()"
+                (selected)="findByMobile()" (keyChange)="reset()"></app-search>
+    <app-manage-data-protection-act [rgpdUser]="rgpdUser"></app-manage-data-protection-act>
+  </mat-dialog-content>
   <button mat-raised-button color="primary">Submit</button>
 </mat-card>
