--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -47,6 +47,10 @@
     <mat-icon>local_atm</mat-icon>
     <span>VAT Management</span>
   </button>
+  <button (click)="slack()" mat-menu-item>
+    <mat-icon>textsms</mat-icon>
+    <span>Publish on Slack</span>
+  </button>
 </mat-menu>
 <!--   Menus  -->
 <mat-menu #cashiers="matMenu">
