--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -142,7 +142,7 @@
     <mat-icon>account_circle</mat-icon>
     <span>Users</span>
   </button>
-  <button disabled="disabled" mat-menu-item routerLink="/shop/users">
+  <button mat-menu-item routerLink="/shop/salespeople">
     <mat-icon>assignment_ind</mat-icon>
     <span>Salespeople</span>
   </button>
