--- a/src/app/shop/users/dialog/user-creation/user-creation-dialog.component.html
+++ b/src/app/shop/users/dialog/user-creation/user-creation-dialog.component.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<h2 mat-dialog-title>New user</h2>
+<mat-dialog-content>
+  <mat-form-field>
+    <mat-label>Mobile</mat-label>
+  </mat-form-field>
+</mat-dialog-content>
