--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -47,6 +47,10 @@
     <mat-icon>local_atm</mat-icon>
     <span>VAT Management</span>
   </button>
+  <button mat-menu-item routerLink="/shop/issues">
+    <mat-icon>bug_report</mat-icon>
+    <span>Issues</span>
+  </button>
 </mat-menu>
 <!--   Menus  -->
 <mat-menu #cashiers="matMenu">
