#28 added new service for Complete Users

--- a/src/app/shared/components/profile-settings/profile-settings.component.html
+++ b/src/app/shared/components/profile-settings/profile-settings.component.html
@@ -60,7 +60,7 @@
             <mat-form-field class="full-width">
               <mat-label>Registration date</mat-label>
               <input formControlName="registrationDateControl" matInput [readonly]="!editable" placeholder="Registration date"
-                     type="date"/>
+                     type="text"/>
             </mat-form-field>
           </tr>
           <tr>
