add manage-data-protection-act.component to registry dialog #9

--- a/src/app/shared/dialogs/register-dialog.component.html
+++ b/src/app/shared/dialogs/register-dialog.component.html
@@ -45,6 +45,8 @@
   <mat-form-field>
     <input [(ngModel)]="password" matInput placeholder="Password" type="password" required/>
   </mat-form-field>
+  <mat-label><b>Data Protection Act</b></mat-label>
+  <app-manage-data-protection-act [rgpdUser]="rgpdUser"></app-manage-data-protection-act>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Cancel</button>
