recoverPassword-dialog updated #15

--- a/src/app/shared/dialogs/recoverPassword-dialog.component.html
+++ b/src/app/shared/dialogs/recoverPassword-dialog.component.html
@@ -1,16 +1,8 @@
 <h2 mat-dialog-title><b>Forgot Email/Password</b></h2>
 <h4 mat-dialog-title>How would you like to reset your password?</h4>
 <mat-dialog-content>
-  <mat-radio-group
-    aria-labelledby="example-radio-group-label"
-    class="example-radio-group"
-    [(ngModel)]="selectedOption">
-    <mat-radio-button class="example-radio-button" *ngFor="let item of options" [value]="item">
-      {{item}}
-    </mat-radio-button>
-  </mat-radio-group>
-  <p>{{getText()}}</p>
-  <mat-form-field *ngIf="activate(options[0])">
+  <p>{{EMAIL_TEXT}}</p>
+  <mat-form-field>
     <input [(ngModel)]="email" matInput [formControl]="emailFormControl" placeholder="Email" type="email"/>
     <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
       Please enter a valid email address
@@ -23,17 +15,8 @@
       <mat-icon>close</mat-icon>
     </button>
   </mat-form-field>
-  <mat-form-field *ngIf="activate(options[1])">
-    <span matPrefix>+34 &nbsp;</span>
-    <input [(ngModel)]="mobile" matInput placeholder="Mobile" type="tel"/>
-    <button (click)="mobile=undefined" *ngIf="mobile" aria-label="Clear" cdkFocusInitial mat-button mat-icon-button
-            matSuffix>
-      <mat-icon>close</mat-icon>
-    </button>
-  </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button *ngIf="activate(options[0])">Email Me</button>
-  <button mat-button *ngIf="activate(options[1])">Text Me</button>
+  <button mat-button>Email Me</button>
 </mat-dialog-actions>
