implement service read, create, save stock audits #21

--- a/src/app/shop/stock-audit/stock-audit.component.html
+++ b/src/app/shop/stock-audit/stock-audit.component.html
@@ -4,7 +4,7 @@
     Stock Audit
   </mat-card-title>
   <mat-card-content>
-    <mat-table [dataSource]="articles" class="mat-elevation-z8">
+    <mat-table [dataSource]="auditArticles" class="mat-elevation-z8">
       <ng-container matColumnDef="id">
         <mat-header-cell *matHeaderCellDef fxFlex="5%">Nº</mat-header-cell>
         <mat-cell *matCellDef="let i = index" fxFlex="5%"> {{i + 1}}</mat-cell>
@@ -27,9 +27,9 @@
       </ng-container>
       <ng-container matColumnDef="realStock">
         <mat-header-cell *matHeaderCellDef fxFlex="20%"> Real stock</mat-header-cell>
-        <mat-cell *matCellDef="let item" fxFlex="20%">
+        <mat-cell *matCellDef="let article" fxFlex="20%">
           <md-input-container>
-            <input mdInput type="number" id="myNumber"/>
+            <input mdInput type="number" [(ngModel)]="article.realStock"/>
           </md-input-container>
         </mat-cell>
       </ng-container>
