--- a/src/app/shop/users/component/users-management.component.html
+++ b/src/app/shop/users/component/users-management.component.html
@@ -1,5 +1,10 @@
 <main class="flex-container">
   <mat-card>
-
+    <mat-card-title>
+      Profile Settings
+    </mat-card-title>
+    <mat-card-content>
+      <app-crud [data]="users" [readAction]="true" [title] = "'Users Management'"></app-crud>
+    </mat-card-content>
   </mat-card>
 </main>
