--- a/src/app/shared/dialogs/recoverPassword-dialog.component.html
+++ b/src/app/shared/dialogs/recoverPassword-dialog.component.html
@@ -18,5 +18,5 @@
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button>Email Me</button>
+  <button mat-button (click)="sendEmail()">Email Me</button>
 </mat-dialog-actions>
