ticket-search.model

--- a/src/app/shop/cashier-opened/tickets/tickets.component.html
+++ b/src/app/shop/cashier-opened/tickets/tickets.component.html
@@ -3,7 +3,7 @@
     <mat-label><strong>Filters: </strong></mat-label>
     <mat-form-field>
       <mat-label>Id, reference or mobile</mat-label>
-      <input [(ngModel)]="key" matInput>
+      <input [(ngModel)]="ticketSearch.key" matInput>
     </mat-form-field>
     <button (click)="search()" mat-icon-button>
       <mat-icon>search</mat-icon>
