Add Simple Size Family Creation UI

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -106,7 +106,7 @@
     <mat-icon>category</mat-icon>
     <span>Articles Family</span>
   </button>
-  <button disabled="disabled" mat-menu-item routerLink="">
+  <button (click)="createSizeFamily()" mat-menu-item routerLink="/shop/articles-size-family-creation">
     <mat-icon>view_module</mat-icon>
     <span>Articles Sizes Family Creator</span>
   </button>
