Refactor names issue#29

--- a/src/app/shop/customer-discount/customer-discount.component.html
+++ b/src/app/shop/customer-discount/customer-discount.component.html
@@ -25,7 +25,7 @@
         <input [(ngModel)]="customerDiscount.user" matInput>
       </label>
     </mat-form-field>
-    <button (click)="getCustomersDiscounts()" mat-icon-button>
+    <button (click)="searchCustomersDiscounts()" mat-icon-button>
       <mat-icon>search</mat-icon>
     </button>
     <button (click)="cleanFilters()" mat-icon-button>
