updatePrices() shopping list #40

--- a/src/app/shop/cashier-opened/tickets/ticket-editing-dialog.component.html
+++ b/src/app/shop/cashier-opened/tickets/ticket-editing-dialog.component.html
@@ -6,7 +6,7 @@
   <mat-card-content>
     <mat-table [dataSource]="shoppingList" class="mat-elevation-z8">
       <ng-container matColumnDef="id">
-        <mat-header-cell *matHeaderCellDef fxFlex="5%">{{this.indexShoppingList + 1}} #</mat-header-cell>
+        <mat-header-cell *matHeaderCellDef fxFlex="5%">#</mat-header-cell>
         <mat-cell *matCellDef="let i = index" fxFlex="5%"> {{i + 1}}</mat-cell>
       </ng-container>
       <ng-container matColumnDef="description">
