--- a/src/app/shop/data-protection-act/data-protection-act-dialog.component.html
+++ b/src/app/shop/data-protection-act/data-protection-act-dialog.component.html
@@ -4,5 +4,5 @@
                 (selected)="findByMobile()" (keyChange)="reset()"></app-search>
     <app-manage-data-protection-act [rgpdUser]="rgpdUser"></app-manage-data-protection-act>
   </mat-dialog-content>
-  <button mat-raised-button color="primary">Submit</button>
+  <button mat-raised-button color="primary" [disabled]="!isReady()">Submit</button>
 </mat-card>
