#30 added staff component

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -154,6 +154,10 @@
     <mat-icon>account_circle</mat-icon>
     <span>Users</span>
   </button>
+  <button mat-menu-item routerLink="/shop/staff">
+    <mat-icon>perm_identity</mat-icon>
+    <span>Staff</span>
+  </button>
   <button mat-menu-item routerLink="/shop/salespeople">
     <mat-icon>assignment_ind</mat-icon>
     <span>Salespeople</span>
