--- a/src/app/shared/dialogs/register-dialog.component.html
+++ b/src/app/shared/dialogs/register-dialog.component.html
@@ -6,6 +6,7 @@
             matSuffix>
       <mat-icon>close</mat-icon>
     </button>
+    <mat-icon matSuffix>phone</mat-icon>
   </mat-form-field>
   <mat-form-field>
     <input [(ngModel)]="user.firstName" matInput placeholder="First name" type="text" required/>
@@ -43,7 +44,10 @@
     </button>
   </mat-form-field>
   <mat-form-field>
-    <input [(ngModel)]="user.password" matInput placeholder="Password" type="password" required/>
+    <input [(ngModel)]="user.password" matInput [type]="hide ? 'password' : 'text'" placeholder="Password" type="password" required/>
+    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+      <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+    </button>
   </mat-form-field>
   <mat-label><b>Data Protection Act</b></mat-label>
   <app-manage-data-protection-act [rgpdUser]="rgpdUser"></app-manage-data-protection-act>
