Add salespeople details

--- a/src/app/shop/salespeople/salespeople.component.html
+++ b/src/app/shop/salespeople/salespeople.component.html
@@ -43,5 +43,5 @@
         </button>
   </mat-card-content>
 </mat-card>
-<app-crud  (read)="print($event)" createAction="false" deleteAction="false" updateAction="false" [data]="salesPeoples" [title]="title">
+<app-crud  (read)="read($event)" createAction="false" deleteAction="false" updateAction="false" [data]="salesPeoples" [title]="title">
 </app-crud>
