Updated fields in invoice management crud table. #36

--- a/src/app/shop/invoices/invoices.component.html
+++ b/src/app/shop/invoices/invoices.component.html
@@ -2,7 +2,7 @@
   <mat-card-content>
     <mat-label><strong>Filters: </strong></mat-label>
     <mat-form-field>
-      <mat-label>Phone</mat-label>
+      <mat-label>User Phone</mat-label>
       <input [(ngModel)]="invoiceSearch.phone" matInput type="number">
     </mat-form-field>
     <mat-form-field>
