Add credit-line to a user done #38

--- a/src/app/shop/shared/dialogs/add-credit-line-dialog.component.html
+++ b/src/app/shop/shared/dialogs/add-credit-line-dialog.component.html
@@ -14,7 +14,7 @@
   </mat-form-field>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button (click)="create()" *ngIf="user" mat-button>Submit</button>
+  <button mat-button mat-dialog-close>Close</button>
+  <button (click)="create()" *ngIf="user" mat-button>Create</button>
 </mat-dialog-actions>
 
