--- a/src/app/shop/articles-size-family-creation/articles-size-family-creation-dialog.component.html
+++ b/src/app/shop/articles-size-family-creation/articles-size-family-creation-dialog.component.html
@@ -1,33 +1,23 @@
-<h1 mat-dialog-title>Dialog Title</h1>
-<div mat-dialog-content>
+<h2 mat-dialog-title>Size Family Creation</h2>
+<mat-dialog-content>
   <mat-form-field style="width: 100%">
     <mat-label>Description</mat-label>
-    <input matInput />
+    <input [(ngModel)]="articleSizeFamily.description" matInput required type="text" />
   </mat-form-field>
-
-  <mat-form-field style="width: 25%; margin-right: 10px">
-    <mat-label>Provider</mat-label>
-    <mat-select>
-      <mat-option value="option">Option1</mat-option>
-      <mat-option value="option">Option2</mat-option>
-      <mat-option value="option">Option3</mat-option>
-    </mat-select>
-  </mat-form-field>
-
+  <app-search-by-company [(company)]="articleSizeFamily.providerCompany" style="width: 25%"></app-search-by-company>
   <mat-form-field style="width: 25%; margin-right: 10px">
     <mat-label>Price</mat-label>
-    <input matInput type="number" />
+    <input [(ngModel)]="articleSizeFamily.retailPrice" matInput required type="number">
   </mat-form-field>
-
   <mat-form-field>
     <mat-label>IVA</mat-label>
-    <mat-select>
-      <mat-option value="option">Option1</mat-option>
-      <mat-option value="option">Option2</mat-option>
-      <mat-option value="option">Option3</mat-option>
+    <mat-select [(ngModel)]="articleSizeFamily.tax">
+      <mat-option *ngFor="let tax of taxValues" [value]="tax">
+        {{tax}}
+      </mat-option>
     </mat-select>
   </mat-form-field>
-</div>
+</mat-dialog-content>
 <mat-radio-group aria-label="Select an option" class="size-type">
   <div class="size-wrapper">
     <mat-radio-button value="1">Numbers</mat-radio-button>
@@ -35,7 +25,6 @@
       <mat-label>Min</mat-label>
       <input matInput type="number" [(ngModel)]="form.min"/>
     </mat-form-field>
-    -
     <mat-form-field style="margin-left: 10px; width: 15%;">
       <mat-label>Max</mat-label>
       <input matInput type="number" [(ngModel)]="form.max" />
@@ -55,8 +44,9 @@
   </div>
 </mat-radio-group>
 <div mat-dialog-actions>
-  <button mat-button mat-dialog-close>Close</button>
-  <button mat-button cdkFocusInitial>Create</button>
+  <button mat-dialog-close mat-raised-button>Close</button>
+  <button (click)="create()" color="primary" mat-raised-button>Create
+  </button>
 </div>
 
 
