--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -110,7 +110,7 @@
     <mat-icon>category</mat-icon>
     <span>Articles Family</span>
   </button>
-  <button (click)="createSizeFamily()" mat-menu-item routerLink="/shop/articles-size-family-creation">
+  <button (click)="createSizeFamily()" mat-menu-item>
     <mat-icon>view_module</mat-icon>
     <span>Articles Sizes Family Creator</span>
   </button>
